[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "time_series_test"
authors = [
    {name = "Sebastiaan Mathôt", email = "s.mathot@cogsci.nl"}
]
readme = "readme.md"
license = {file = "COPYING"}
requires-python = ">=3.5"
dynamic = ["version", "description"]
dependencies = [
    "datamatrix",
    "statsmodels",
    "matplotlib"
]
keywords = ["signal processing", "statistics", "plotting", "data analysis",
            "crossvalidation"]
[project.urls]
Documentation = "https://github.com/smathot/time_series_test"
Source = "https://github.com/smathot/time_series_test"
